[package]
name = "gitrevset"
version = "0.1.0"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"
license = "GPL-2.0-only"
description = "A domain-specific-language to select commits in a git repo. Similar to Mercurial's revset."
repository = "https://github.com/quark-zju/gitrevset"

[dependencies]
drawdag = { package = "esl01-drawdag", version = "0.1", optional = true }
gitdag = "0.1.1"
globset = "0.4"
lalrpop-util = { version = "0.19", features = ["lexer"] }
once_cell = "1.4"
tempfile = { version = "3", optional = true }
thiserror = "1"

[dev-dependencies]
drawdag = { package = "esl01-drawdag", version = "0.1" }
tempfile = "3"

[features]
default = []
testutil = ["drawdag", "tempfile"]